# live-whirl

./: .gitignore  Cargo.toml  Makefile  README.md  Untitled-1.psd  concat videos.sh  ent.plist
archive/: debug_then_transcode.sh
examples/: headless-example.rs
scent color map/: gradient.psd
src/: ball.rs  ball_source.rs  ball_sync.rs  camera_tuning.rs  capture.rs  ffmpeg.rs  lib.rs  main.rs  markers.rs  setup.rs  shared_consts.rs  tuning.rs
tests/: tuning_http.rs
