[package]
name = "live-whirl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
# opt-level = 0

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 3
# opt-level = 1
# opt-level = 0

[dependencies]
rand = "0.7.0"
chrono = "0.4.31"
coolor = "*"
bevy = { version = "0.16.1" }
crossbeam-channel = "0.5"
# keep only a single crossbeam-channel entry
bevy_rapier2d = { version = "0.31.0", features = ["simd-stable", "parallel", "debug-render-2d"] }
bevy_core_pipeline = "0.16.1"
# bevy_rapier2d = { version = "0.22.0", features = ["simd-stable", "debug-render-2d"] }

